<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  *Copyright 2020. Explore in HMS. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  ~
  ~  */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_activities"
        android:icon="@drawable/run"
        android:title="@string/title_activities" />

    <item
        android:id="@+id/navigation_step"
        android:icon="@drawable/shoe_print"
        android:title="@string/title_step" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/account"
        android:title="@string/title_profile" />

</menu>