<!--
  ~ /**
  ~  *Copyright 2020. Explore in HMS. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  ~
  ~  */
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View"/>
        <variable name="viewModel" type="com.hms.referenceapp.healthylifeapp.ui.addworkout.AddWorkoutViewModel" />
        <variable name="resId" type="Integer" />
        <variable name="init" type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/backBtn"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/white"
                    app:srcCompat="@drawable/ic_back" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/add_workout"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/white" />

                <ImageButton
                    android:id="@+id/saveBtn"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/white"
                    app:srcCompat="@drawable/ic_check_white_24dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:orientation="vertical"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/activityNameEditText"
                    android:inputType="text"
                    android:hint="@string/activity_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:enabled="true"
                    android:background="@drawable/rounded_edittext"
                    android:minHeight="50dp"
                    android:textSize="16sp"
                    android:selectAllOnFocus="true" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/typeEditText"
                    android:inputType="text"
                    android:focusable="false"
                    android:hint="@string/activity_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:enabled="true"
                    android:background="@drawable/rounded_edittext"
                    android:minHeight="50dp"
                    android:textSize="16sp"
                    android:selectAllOnFocus="true" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/startTimeEditText"
                    android:inputType="text"
                    android:focusable="false"
                    android:hint="@string/start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:enabled="true"
                    android:background="@drawable/rounded_edittext"
                    android:minHeight="50dp"
                    android:textSize="16sp"
                    android:selectAllOnFocus="true" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/endTimeEditText"
                    android:inputType="text"
                    android:focusable="false"
                    android:hint="@string/end_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:enabled="true"
                    android:background="@drawable/rounded_edittext"
                    android:minHeight="50dp"
                    android:textSize="16sp"
                    android:selectAllOnFocus="true" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/distanceEditText"
                    android:inputType="number"
                    android:hint="@string/distance_in_m"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:enabled="true"
                    android:background="@drawable/rounded_edittext"
                    android:minHeight="50dp"
                    android:textSize="16sp"
                    android:selectAllOnFocus="true" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/descriptionEditText"
                    android:inputType="text"
                    android:hint="@string/activity_description"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:enabled="true"
                    android:background="@drawable/rounded_edittext"
                    android:minHeight="50dp"
                    android:textSize="16sp"
                    android:selectAllOnFocus="true" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>