<!--
  ~ /**
  ~  *Copyright 2020. Explore in HMS. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  ~
  ~  */
  -->

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View"/>
        <variable name="viewModel" type="com.hms.referenceapp.healthylifeapp.ui.workoutdetail.WorkoutDetailViewModel" />
        <variable name="resId" type="Integer" />
        <variable name="init" type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical"
                android:orientation="horizontal">

<!--                hardcoded stringler resourse file a extract edilmeli-->
                <ImageButton
                    android:id="@+id/backBtn"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/white"
                    app:srcCompat="@drawable/ic_back"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/workout_detail"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/white" />

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp">

                    <TextView
                        android:id="@+id/workoutNameTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:textSize="24sp"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/rounded_edittext"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:visibility="visible"
                            app:srcCompat="@drawable/ic_fire_grey600_24dp"
                            app:tint="@color/red" />

<!--                        margin-left ler margin start olmalı
                            yoksa rtl desteği olmaz-->

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/calories" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/calorieTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/rounded_edittext"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:visibility="visible"
                            app:srcCompat="@drawable/ic_timer_grey600_24dp"
                            app:tint="@color/green" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/duration" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/durationTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/rounded_edittext"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:visibility="visible"
                            app:srcCompat="@drawable/ic_map_marker_distance_grey600_24dp"
                            app:tint="@color/blue" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/distance" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/distanceTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/rounded_edittext"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:visibility="visible"
                            app:srcCompat="@drawable/ic_speedometer_grey600_24dp"
                            app:tint="@color/orange" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/speed" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/speedTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/rounded_edittext"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:visibility="visible"
                            app:srcCompat="@drawable/ic_speedometer_medium_grey600_24dp"
                            app:tint="@color/amber" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/pace" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/paceTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"/>

                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/finishBtn"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/update_button_bg"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/finish"
                        android:textColor="@android:color/white" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/deleteBtn"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/update_button_bg"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/delete"
                        android:textColor="@android:color/white" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>